fix: websocket to websocket broker for webRTC

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -33,7 +33,7 @@
                                         class="btn badge badge-primary" onclick="addUuidToButtonLink(this);">99
                                 </button>
                             </a>
-    ```````                    </span>
+                        </span>
             </h4>
           </div>
           <div class="mb-3">
