--- a/src/main/resources/templates/chat_room.html
+++ b/src/main/resources/templates/chat_room.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <script src="/webjars/sockjs-client/sockjs.min.js"></script>
+    <script src="/webjars/stomp-websocket/stomp.min.js"></script>
     <!-- Custom styles for this template -->
     <style>
         .btn.active {
@@ -26,6 +28,13 @@
         }
         .btn.active span:last-child  {
             display: none;
+        }
+
+        #local_video
+        {
+            transform: rotateY(180deg);
+            -webkit-transform:rotateY(180deg); /* Safari and Chrome */
+            -moz-transform:rotateY(180deg); /* Firefox */
         }
     </style>
     <link rel="stylesheet" type="text/css" href="/css/main.css"/>
