fix: webRTC config error fix

--- a/src/main/resources/templates/chat_room.html
+++ b/src/main/resources/templates/chat_room.html
@@ -36,6 +36,14 @@
             -webkit-transform:rotateY(180deg); /* Safari and Chrome */
             -moz-transform:rotateY(180deg); /* Firefox */
         }
+        #remote_video
+        {
+            transform: rotateY(180deg);
+            -webkit-transform:rotateY(180deg); /* Safari and Chrome */
+            -moz-transform:rotateY(180deg); /* Firefox */
+        }
+
+
     </style>
     <link rel="stylesheet" type="text/css" href="/css/main.css"/>
 </head>
