--- a/src/main/resources/templates/administration/topic/addTopicForm.html
+++ b/src/main/resources/templates/administration/topic/addTopicForm.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css"
+          th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
     <style>
  .container {
  max-width: 560px;
