--- a/src/main/resources/templates/administration/topic/editTopicForm.html
+++ b/src/main/resources/templates/administration/topic/editTopicForm.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css"
+          th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
     <style>
  .container {
  max-width: 560px;
@@ -19,27 +19,27 @@
         <div>
             <label for="topicId">topic ID</label>
             <input type="text" id="topicId" name="topicId" class="form-control" value="1"
-                   th:value="${topic.topicId}" readonly>
+                   th:value="${topic.id}" readonly>
         </div>
         <div>
             <label for="theme">theme</label>
-            <input type="text" id="theme" name="theme" class="form-control" value="theme">
+            <input type="text" id="theme" name="theme" class="form-control" th:value="${topic.theme}">
         </div>
         <div>
             <label for="studyDate">Date</label>
             <input type="date" id="studyDate" name="studyDate" class="form-control"
-                   value="2021-08-31" th:min="${today}">
-        </div>
-        <div>
-            <label for="previewId">preview ID</label>
-            <input type="text" id="previewId" name="previewId" class="form-control" value="0"
-                   th:value="${topic.previewId}" readonly>
+                   th:value="${topic.studyDate}" th:min="${today}">
         </div>
         <div>
             <label for="numOfParticipant">Number of participant</label>
             <input type="text" id="numOfParticipant" name="numOfParticipant"
                    class="form-control" value="0"
                    th:value="${topic.numOfParticipant}" readonly>
+        </div>
+        <div>
+            <label for="previewId">topic ID</label>
+            <input type="text" id="previewId" name="previewId" class="form-control" value="1"
+                   th:value="${topic.id}" hidden>
         </div>
         <hr class="my-4">
         <div class="row">
@@ -50,7 +50,7 @@
             <div class="col">
                 <button class="w-100 btn btn-secondary btn-lg"
                         onclick="location.href='topic.html'"
-                        th:onclick="|location.href='@{/administration/topics/{topicId}(topicId=${topic.topicId})}'|"
+                        th:onclick="|location.href='@{/administration/topics/{topicId}(topicId=${topic.id})}'|"
                         type="button">Cancel</button>
             </div>
         </div>
