--- a/src/main/resources/templates/administration/topic/topic.html
+++ b/src/main/resources/templates/administration/topic/topic.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css"
+          th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
     <style>
          .container {
          max-width: 560px;
@@ -18,7 +18,7 @@
     <div>
         <label for="topicId">topic ID</label>
         <input type="text" id="topicId" name="topicId" class="form-control"
-               value="1" th:value="${topic.topicId}" readonly>
+               value="1" th:value="${topic.id}" readonly>
     </div>
     <div>
         <label for="theme">Theme</label>
@@ -36,11 +36,6 @@
                value="MON" th:value="${topic.studyDay}" readonly>
     </div>
     <div>
-        <label for="previewId">Preview Id</label>
-        <input type="text" id="previewId" name="previewId" class="form-control"
-               value="1" th:value="${topic.previewId}" readonly>
-    </div>
-    <div>
         <label for="numOfParticipant">Number of participant</label>
         <input type="text" id="numOfParticipant" name="numOfParticipant" class="form-control"
                value="0" th:value="${topic.numOfParticipant}" readonly>
@@ -50,8 +45,15 @@
         <div class="col">
             <button class="w-100 btn btn-primary btn-lg"
                     onclick="location.href='editTopicForm.html'"
-                    th:onclick="|location.href='@{/administration/topics/{topicId}/edit(topicId=${topic.topicId})}'|" type="button">
+                    th:onclick="|location.href='@{/administration/topics/{topicId}/edit(topicId=${topic.id})}'|" type="button">
                 topic 수정
+            </button>
+        </div>
+        <div class="col">
+            <button class="w-100 btn btn-primary btn-lg"
+                    onclick="location.href='preview.html'"
+                    th:onclick="|location.href='@{/administration/topics/preview/{previewId}(previewId=${topic.id})}'|" type="button">
+                preview 보기
             </button>
         </div>
         <div class="col">
