--- a/src/main/resources/templates/administration/topic/topics.html
+++ b/src/main/resources/templates/administration/topic/topics.html
@@ -2,8 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link th:href="@{/css/bootstrap.min.css}"
-          href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css"
+          th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
 </head>
 <body>
 
@@ -15,7 +15,7 @@
         <div class="col">
             <button class="btn btn-primary float-end"
                     onclick="location.href='addTopicForm.html'"
-                    th:onclick="|location.href='@{/administration/topics/add}'|"
+                    th:onclick="|location.href='@{/administration/topics/addTopic}'|"
                     type="button">토픽 등록</button>
         </div>
     </div>
@@ -28,17 +28,15 @@
                 <th>theme</th>
                 <th>Date</th>
                 <th>Day</th>
-                <th>preview ID</th>
                 <th>numOfParticipant</th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="topic : ${topics}">
-                <td><a href="topic.html" th:href="@{/administration/topics/{topicId}(topicId=${topic.topicId})}" th:text="${topic.topicId}">topic id</a></td>
-                <td><a href="topic.html" th:href="@{|/administration/topics/${topic.topicId}|}" th:text="${topic.theme}">theme</a></td>
+                <td><a href="topic.html" th:href="@{|/administration/topics/${topic.id}|}" th:text="${topic.id}">topic id</a></td>
+                <td><a href="topic.html" th:href="@{|/administration/topics/${topic.id}|}" th:text="${topic.theme}">theme</a></td>
                 <td th:text="${topic.studyDate}">date</td>
                 <td th:text="${topic.studyDay}">day</td>
-                <td th:text="${topic.previewId}">preview id</td>
                 <td th:text="${topic.numOfParticipant}">number of participant</td>
             </tr>
             </tbody>
