fix: delete Cancel button at addPreviewForm.html addPreviewForm에서 Cancel버튼을 지움. 직전에 입력했던 topic을 수정하려면 일단 preview 등록을 한 후 수정해야 함. feat: 모든 form에서 모든 정보를 입력해야 submit 가능하도록 수정함.

--- a/src/main/resources/templates/administration/topic/addTopicForm.html
+++ b/src/main/resources/templates/administration/topic/addTopicForm.html
@@ -19,12 +19,12 @@
     <form action="topic.html" th:action method="post">
         <div>
             <label for="theme">Theme</label>
-            <input type="text" id="theme" th:name="theme" class="form-control" placeholder="Enter topic theme">
+            <input type="text" id="theme" th:name="theme" class="form-control" placeholder="Enter topic theme" required>
         </div>
         <div>
             <label for="studyDate">Date</label>
             <input type="date" id="studyDate" name="studyDate" class="form-control"
-                   value="2021-08-31" th:min="${today}">
+                   th:min="${today}" required>
         </div>
         <hr class="my-4">
         <div class="row">
