--- a/src/main/resources/templates/administration/topic/addPreviewForm.html
+++ b/src/main/resources/templates/administration/topic/addPreviewForm.html
@@ -22,8 +22,7 @@
         </div>
         <div>
             <label for="context">Context</label>
-            <textarea id="context" name="context" class="form-control">
-            </textarea>
+            <textarea id="context" name="context" class="form-control" required></textarea>
         </div>
         <div>
             <label for="detailTopicList">Date</label>
@@ -33,14 +32,12 @@
                 </tr>
                 <tr>
                     <td>
-                        <textarea id="detailContext1" name="detailContext1" class="form-control">
-                        </textarea>
+                        <textarea id="detailContext1" name="detailContext1" class="form-control" required></textarea>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <textarea id="detailContext2" name="detailContext2" class="form-control">
-                        </textarea>
+                        <textarea id="detailContext2" name="detailContext2" class="form-control" required></textarea>
                     </td>
                 </tr>
             </table>
@@ -55,67 +52,57 @@
                 </tr>
                 <tr>
                     <td>
-                        <input type="text" id="expressionWord1" name="expressionWord1">
+                        <input type="text" id="expressionWord1" name="expressionWord1" required>
                     </td>
                     <td>
-                        <textarea id="expressionMeaning1" name="expressionMeaning1">
-                        </textarea>
+                        <textarea id="expressionMeaning1" name="expressionMeaning1" required></textarea>
                     </td>
                     <td>
-                        <textarea id="expressionExample1" name="expressionExample1">
-                        </textarea>
+                        <textarea id="expressionExample1" name="expressionExample1" required></textarea>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <input type="text" id="expressionWord2" name="expressionWord2">
+                        <input type="text" id="expressionWord2" name="expressionWord2" required>
                     </td>
                     <td>
-                        <textarea id="expressionMeaning2" name="expressionMeaning2">
-                        </textarea>
+                        <textarea id="expressionMeaning2" name="expressionMeaning2" required></textarea>
                     </td>
                     <td>
-                        <textarea id="expressionExample2" name="expressionExample2">
-                        </textarea>
+                        <textarea id="expressionExample2" name="expressionExample2" required></textarea>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <input type="text" id="expressionWord3" name="expressionWord3">
+                        <input type="text" id="expressionWord3" name="expressionWord3" required>
                     </td>
                     <td>
-                        <textarea id="expressionMeaning3" name="expressionMeaning3">
-                        </textarea>
+                        <textarea id="expressionMeaning3" name="expressionMeaning3" required></textarea>
                     </td>
                     <td>
-                        <textarea id="expressionExample3" name="expressionExample3">
-                        </textarea>
+                        <textarea id="expressionExample3" name="expressionExample3" required></textarea>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <input type="text" id="expressionWord4" name="expressionWord4">
+                        <input type="text" id="expressionWord4" name="expressionWord4" required>
                     </td>
                     <td>
-                        <textarea id="expressionMeaning4" name="expressionMeaning4">
-                        </textarea>
+                        <textarea id="expressionMeaning4" name="expressionMeaning4" required></textarea>
                     </td>
                     <td>
-                        <textarea id="expressionExample4" name="expressionExample4">
-                        </textarea>
+                        <textarea id="expressionExample4" name="expressionExample4" required></textarea>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <input type="text" id="expressionWord5" name="expressionWord5">
+                        <input type="text" id="expressionWord5" name="expressionWord5" required>
                     </td>
                     <td>
-                        <textarea id="expressionMeaning5" name="expressionMeaning5">
-                        </textarea>
+                        <textarea id="expressionMeaning5" name="expressionMeaning5" required></textarea>
                     </td>
                     <td>
-                        <textarea id="expressionExample5" name="expressionExample5">
-                        </textarea>
+                        <textarea id="expressionExample5" name="expressionExample5" required></textarea>
                     </td>
                 </tr>
             </table>
@@ -125,12 +112,6 @@
             <div class="col">
                 <button class="w-100 btn btn-primary btn-lg" type="submit">Submit
                 </button>
-            </div>
-            <div class="col">
-                <button class="w-100 btn btn-secondary btn-lg"
-                        onclick="location.href='preview.html'"
-                        th:onclick="|location.href='@{/administration/topics}'|"
-                        type="button">Cancel</button>
             </div>
         </div>
     </form>
