--- a/src/main/resources/templates/administration/topics/addTopicForm.html
+++ b/src/main/resources/templates/administration/topics/addTopicForm.html
@@ -16,7 +16,7 @@
         <h2>Topic Create Form</h2>
     </div>
     <h4 class="mb-3">Topic 입력</h4>
-    <form action="topic.html" th:action method="post">
+    <form action="topic.html" th:action enctype="multipart/form-data" method="post">
         <div>
             <label for="theme">Theme</label>
             <input type="text" id="theme" th:name="theme" class="form-control" placeholder="Enter topic theme" required>
@@ -25,6 +25,10 @@
             <label for="studyDate">Date</label>
             <input type="date" id="studyDate" name="studyDate" class="form-control"
                    th:min="${today}" required>
+        </div>
+        <div>
+            <label>Photos: </label>
+            <input type="file" name="image" accept="image/png, image/jpeg" required />
         </div>
         <hr class="my-4">
         <div class="row">
