--- a/src/main/resources/templates/administration/topics/topic.html
+++ b/src/main/resources/templates/administration/topics/topic.html
@@ -42,7 +42,7 @@
     </div>
     <div>
         <label for="photo">Photo</label>
-        <img id="photo" name="photo" th:src="@{{img}(img=${topic.photosImagePath})}"
+        <img id="photo" name="photo" th:src="@{data:image/png;base64,{img}(img=${base64EncodedImage})}"
              alt="photo"  height="400" width="300" />
     </div>
     <hr class="my-4">
