--- a/src/main/resources/templates/administration/topics/topic.html
+++ b/src/main/resources/templates/administration/topics/topic.html
@@ -21,9 +21,14 @@
                value="1" th:value="${topic.id}" readonly>
     </div>
     <div>
-        <label for="theme">Theme</label>
-        <input type="text" id="theme" name="theme" class="form-control"
-               value="themeA" th:value="${topic.theme}" readonly>
+        <label for="korTheme">korTheme</label>
+        <input type="text" id="korTheme" name="korTheme" class="form-control"
+               value="themeA" th:value="${topic.korTheme}" readonly>
+    </div>
+    <div>
+        <label for="engTheme">engTheme</label>
+        <input type="text" id="engTheme" name="engTheme" class="form-control"
+               value="themeB" th:value="${topic.engTheme}" readonly>
     </div>
     <div>
         <label for="date">Date</label>
