--- a/src/main/resources/templates/administration/topics/editTopicForm.html
+++ b/src/main/resources/templates/administration/topics/editTopicForm.html
@@ -22,8 +22,12 @@
                    th:value="${topic.id}" readonly>
         </div>
         <div>
-            <label for="theme">theme</label>
-            <input type="text" id="theme" name="theme" class="form-control" th:value="${topic.theme}" required>
+            <label for="korTheme">korTheme</label>
+            <input type="text" id="korTheme" name="korTheme" class="form-control" th:value="${topic.korTheme}" required>
+        </div>
+        <div>
+            <label for="engTheme">engTheme</label>
+            <input type="text" id="engTheme" name="engTheme" class="form-control" th:value="${topic.engTheme}" required>
         </div>
         <div>
             <label for="studyDate">Date</label>
